--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             placeholder="Contraseña" id="password" required>
             <input type="submit" value="Iniciar sesión ">
             <p class="mt-3" style="padding: 10px;" >¿No tienes una cuenta? <a href="register.html" style="color: #b333ff;">Registrate aqui</a></p>
+            <p class="mt-3" style="padding: 10px;" >Ingresa sin iniciar sesión  <a href="inicio.php" style="color: #b333ff;"> ¡¡Inicia aquí!! </a></p>
         </form>
     </div>
 </body>
